--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                     </ul>
                 </nav>
                 <div class="header__btns">
-                    <a href="" class="header__contact btn btn_small btn_border-white">Contact</a>
+                    <a href="" class="header__contact btn btn_small btn_border-white link-scroll"
+                        data-scroll="footer">Contact</a>
                     <button class="header__burger">
                         <span></span><span></span><span></span>
                     </button>
@@ -124,8 +125,7 @@
                         <div class="contacts__links">
                             <div class="contacts__link link-contacts">
                                 <span class="link-contacts__label">Email:</span>
-                                <a href="mailto:contact@thytadel.com"
-                                    class="link-contacts__value">contact@thytadel.com</a>
+                                <a href="mailto:info@thytadel.com" class="link-contacts__value">info@thytadel.comm</a>
                             </div>
                             <div class="contacts__link link-contacts">
                                 <span class="link-contacts__label">Phone:</span>
@@ -135,13 +135,10 @@
                         <div class="contacts__socials socials">
                             <ul>
                                 <li>
-                                    <a href="#">Instagram</a>
-                                </li>
-                                <li>
-                                    <a href="#">Youtube</a>
-                                </li>
-                                <li>
                                     <a href="#">LinkedIn</a>
+                                </li>
+                                <li>
+                                    <a href="#">Crunchbase</a>
                                 </li>
                             </ul>
                         </div>
@@ -279,8 +276,7 @@
                                     </svg>
                                     <div class="card__text b1">
                                         <p>
-                                            procurement-block of specialist equipment for civil, municipal and strategic
-                                            use
+                                            Procurement of specialist equipment for civil, municipal and strategic use
                                         </p>
                                     </div>
                                 </div>
@@ -338,7 +334,7 @@
                         <div class="top__row">
                             <div class="top__column top__column_title wow animate__animated animate__fadeInLeft">
                                 <h2 class="top__title medium">
-                                    concierge-block with an operator’s mindset
+                                    Concierge with an operator’s mindset
                                 </h2>
                             </div>
                             <div class="top__column top__column_text wow animate__animated animate__fadeInRight">
@@ -369,7 +365,7 @@
                         <div class="concierge-block__item item-concierge-block">
                             <div class="item-concierge-block__text b1">
                                 <p>
-                                    procurement-block and sourcing of rare, restricted or high-value items
+                                    Procurement and sourcing of rare, restricted or high-value items
                                 </p>
                             </div>
                             <div class="item-concierge-block__image">
@@ -604,7 +600,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer" id="footer">
     <div class="footer__container container">
         <div class="footer__main">
             <div class="footer__row">
@@ -621,8 +617,8 @@
                             <div class="contacts__links">
                                 <div class="contacts__link link-contacts">
                                     <span class="link-contacts__label">Email:</span>
-                                    <a href="mailto:contact@thytadel.com"
-                                        class="link-contacts__value">contact@thytadel.com</a>
+                                    <a href="mailto:info@thytadel.com"
+                                        class="link-contacts__value">info@thytadel.com</a>
                                 </div>
                                 <div class="contacts__link link-contacts">
                                     <span class="link-contacts__label">Phone:</span>
@@ -639,7 +635,7 @@
                             <nav>
                                 <ul>
                                     <li>
-                                        <a href="" class="menu-footer__link link">
+                                        <a href="technology.html" class="menu-footer__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">Tech</span>
@@ -651,7 +647,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="" class="menu-footer__link link">
+                                        <a href="procurement.html" class="menu-footer__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">Procurement</span>
@@ -663,7 +659,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="" class="menu-footer__link link">
+                                        <a href="concierge.html" class="menu-footer__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">Concierge</span>
@@ -675,8 +671,7 @@
                                         </a>
                                     </li>
                                     <li>
-
-                                        <a href="" class="menu-footer__link link">
+                                        <a href="assets.html" class="menu-footer__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">Asset Management</span>
@@ -688,7 +683,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="" class="menu-footer__link link">
+                                        <a href="about.html" class="menu-footer__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">About Us</span>
