--- a/concierge.html
+++ b/concierge.html
@@ -104,7 +104,8 @@
                             </ul>
                         </nav>
                         <div class="header__btns">
-                            <a href="" class="header__contact btn btn_small btn_border-black">Contact</a>
+                            <a href="" class="header__contact btn btn_small btn_border-white link-scroll"
+                                data-scroll="footer">Contact</a>
                             <button class="header__burger">
                                 <span></span><span></span><span></span>
                             </button>
@@ -124,8 +125,8 @@
                                 <div class="contacts__links">
                                     <div class="contacts__link link-contacts">
                                         <span class="link-contacts__label">Email:</span>
-                                        <a href="mailto:contact@thytadel.com"
-                                            class="link-contacts__value">contact@thytadel.com</a>
+                                        <a href="mailto:info@thytadel.com"
+                                            class="link-contacts__value">info@thytadel.comm</a>
                                     </div>
                                     <div class="contacts__link link-contacts">
                                         <span class="link-contacts__label">Phone:</span>
@@ -135,13 +136,10 @@
                                 <div class="contacts__socials socials">
                                     <ul>
                                         <li>
-                                            <a href="#">Instagram</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Youtube</a>
-                                        </li>
-                                        <li>
                                             <a href="#">LinkedIn</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Crunchbase</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -516,7 +514,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer" id="footer">
             <div class="footer__container container">
                 <div class="footer__main">
                     <div class="footer__row">
@@ -533,8 +531,8 @@
                                     <div class="contacts__links">
                                         <div class="contacts__link link-contacts">
                                             <span class="link-contacts__label">Email:</span>
-                                            <a href="mailto:contact@thytadel.com"
-                                                class="link-contacts__value">contact@thytadel.com</a>
+                                            <a href="mailto:info@thytadel.com"
+                                                class="link-contacts__value">info@thytadel.com</a>
                                         </div>
                                         <div class="contacts__link link-contacts">
                                             <span class="link-contacts__label">Phone:</span>
@@ -552,7 +550,7 @@
                                     <nav>
                                         <ul>
                                             <li>
-                                                <a href="" class="menu-footer__link link">
+                                                <a href="technology.html" class="menu-footer__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">Tech</span>
@@ -564,7 +562,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="" class="menu-footer__link link">
+                                                <a href="procurement.html" class="menu-footer__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">Procurement</span>
@@ -576,7 +574,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="" class="menu-footer__link link active">
+                                                <a href="concierge.html" class="menu-footer__link link active">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">Concierge</span>
@@ -588,8 +586,7 @@
                                                 </a>
                                             </li>
                                             <li>
-
-                                                <a href="" class="menu-footer__link link">
+                                                <a href="assets.html" class="menu-footer__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">Asset Management</span>
@@ -601,7 +598,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="" class="menu-footer__link link">
+                                                <a href="about.html" class="menu-footer__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">About Us</span>
