--- a/about.html
+++ b/about.html
@@ -104,8 +104,8 @@
                             </ul>
                         </nav>
                         <div class="header__btns">
-                            <a href="" class="header__contact btn btn_small btn_border-white link-scroll"
-                                data-scroll="footer">Contact</a>
+                            <a href="" class="header__contact btn btn_small btn_border-black link-scroll"
+                                data-scroll="contact">Contact</a>
                             <button class="header__burger">
                                 <span></span><span></span><span></span>
                             </button>
@@ -136,10 +136,12 @@
                                 <div class="contacts__socials socials">
                                     <ul>
                                         <li>
-                                            <a href="#">LinkedIn</a>
+                                            <a href="https://www.linkedin.com/company/thytadel/"
+                                                target="_blank">LinkedIn</a>
                                         </li>
                                         <li>
-                                            <a href="#">Crunchbase</a>
+                                            <a href="https://www.crunchbase.com/organization/thytadel"
+                                                target="_blank">Crunchbase</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -218,7 +220,8 @@
                                         <div class="origins__bottom-logo">
                                             <img src="img/about/origins/01.png" alt="Rorc transatlantic race">
                                         </div>
-                                        <a href="" class="origins__btn btn-arrow btn-arrow_border-black">
+                                        <a href="img/Comanche 2021 Rolex Maxi cup crew profiles.pdf" target="_blank"
+                                            class="origins__btn btn-arrow btn-arrow_border-black">
                                             <svg>
                                                 <use xlink:href="#arrow20"></use>
                                             </svg>
@@ -297,7 +300,8 @@
                                             <div class="item-challenge__info b4">
                                                 That system became UK Patent GB2623311.
                                             </div>
-                                            <a href="#" type='submit'
+                                            <a href="https://www.search-for-intellectual-property.service.gov.uk/GB2623311"
+                                                target="_blank" type='submit'
                                                 class='item-challenge__btn btn-arrow btn-arrow_black'>
                                                 <svg>
                                                     <use xlink:href="#arrow20"></use>
@@ -424,7 +428,7 @@
                             <span>Thytadel remains family-founded, operator-led, and disciplined by experience.</span>
                         </div>
                     </div>
-                    <div class="contact__body">
+                    <div class="contact__body" id="contact">
                         <div class="contact__content wow animate__animated animate__fadeInLeft">
                             <h2 class="contact__title medium">
                                 Contact Thytadel
@@ -598,7 +602,8 @@
                                     <div class="form-footer__socials socials">
                                         <ul>
                                             <li>
-                                                <a href="#" class="socials__link link">
+                                                <a href="https://www.linkedin.com/company/thytadel/" target="_blank"
+                                                    class="socials__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">LinkedIn</span>
@@ -610,7 +615,8 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" class="socials__link link">
+                                                <a href="https://www.crunchbase.com/organization/thytadel"
+                                                    target="_blank" class="socials__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">Crunchbase</span>
