--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </nav>
                 <div class="header__btns">
                     <a href="" class="header__contact btn btn_small btn_border-white link-scroll"
-                        data-scroll="footer">Contact</a>
+                        data-scroll="contact">Contact</a>
                     <button class="header__burger">
                         <span></span><span></span><span></span>
                     </button>
@@ -135,10 +135,11 @@
                         <div class="contacts__socials socials">
                             <ul>
                                 <li>
-                                    <a href="#">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/company/thytadel/" target="_blank">LinkedIn</a>
                                 </li>
                                 <li>
-                                    <a href="#">Crunchbase</a>
+                                    <a href="https://www.crunchbase.com/organization/thytadel"
+                                        target="_blank">Crunchbase</a>
                                 </li>
                             </ul>
                         </div>
@@ -167,7 +168,8 @@
                                 everything else.
                             </p>
                         </div>
-                        <a href="#" class="banner__btn btn btn_big btn_grey animate__animated animate__fadeIn"
+                        <a href="technology.html"
+                            class="banner__btn btn btn_big btn_grey animate__animated animate__fadeIn"
                             style="animation-delay: 1.5s; animation-duration: 1.5s;">Lets start</a>
                     </div>
                 </div>
@@ -227,7 +229,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="tech__btn btn btn_small btn_border-black">See more</a>
+                            <a href="technology.html" class="tech__btn btn btn_small btn_border-black">See more</a>
                         </div>
                     </div>
                 </div>
@@ -258,7 +260,7 @@
                     <div class="procurement-block__cards cards">
                         <div class="cards__row">
                             <div class="cards__column wow animate__animated animate__fadeInUp">
-                                <div class="cards__item card">
+                                <a href="procurement.html" class="cards__item card">
                                     <svg>
                                         <use xlink:href="#arrow46"></use>
                                     </svg>
@@ -267,10 +269,10 @@
                                             Deployment of certified safety technology and operational platforms
                                         </p>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="cards__column wow animate__animated animate__fadeInUp">
-                                <div class="cards__item card">
+                                <a href="procurement.html" class="cards__item card">
                                     <svg>
                                         <use xlink:href="#arrow46"></use>
                                     </svg>
@@ -279,10 +281,10 @@
                                             Procurement of specialist equipment for civil, municipal and strategic use
                                         </p>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="cards__column wow animate__animated animate__fadeInUp">
-                                <div class="cards__item card">
+                                <a href="procurement.html" class="cards__item card">
                                     <svg>
                                         <use xlink:href="#arrow46"></use>
                                     </svg>
@@ -291,10 +293,10 @@
                                             Project management, integration support and lifespan maintenance planning
                                         </p>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="cards__column wow animate__animated animate__fadeInUp">
-                                <div class="cards__item card">
+                                <a href="procurement.html" class="cards__item card">
                                     <svg>
                                         <use xlink:href="#arrow46"></use>
                                     </svg>
@@ -303,10 +305,10 @@
                                             Compliance alignment with regulatory, insurance and audit requirements
                                         </p>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="cards__column wow animate__animated animate__fadeInUp">
-                                <div class="cards__item card">
+                                <a href="procurement.html" class="cards__item card">
                                     <svg>
                                         <use xlink:href="#arrow46"></use>
                                     </svg>
@@ -316,11 +318,12 @@
                                             accountability
                                         </p>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="cards__column wow animate__animated animate__fadeInUp">
                                 <div class="cards__item card card_btn">
-                                    <a href="#" class="card__btn btn btn_small btn_border-black">See all</a>
+                                    <a href="procurement.html" class="card__btn btn btn_small btn_border-black">See
+                                        all</a>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +355,7 @@
                         </div>
                     </div>
                     <div class="concierge-block__body wow animate__animated animate__fadeInUp">
-                        <div class="concierge-block__item item-concierge-block">
+                        <a href="concierge.html" class="concierge-block__item item-concierge-block">
                             <div class="item-concierge-block__text b1">
                                 <p>
                                     End-to-end management of personal, family and operational projects
@@ -361,8 +364,8 @@
                             <div class="item-concierge-block__image">
                                 <img src="img/home/concierge-block/01.jpg" alt="concierge-block-img">
                             </div>
-                        </div>
-                        <div class="concierge-block__item item-concierge-block">
+                        </a>
+                        <a href="concierge.html" class="concierge-block__item item-concierge-block">
                             <div class="item-concierge-block__text b1">
                                 <p>
                                     Procurement and sourcing of rare, restricted or high-value items
@@ -371,8 +374,8 @@
                             <div class="item-concierge-block__image">
                                 <img src="img/home/concierge-block/01.jpg" alt="concierge-block-img">
                             </div>
-                        </div>
-                        <div class="concierge-block__item item-concierge-block">
+                        </a>
+                        <a href="concierge.html" class="concierge-block__item item-concierge-block">
                             <div class="item-concierge-block__text b1">
                                 <p>
                                     Discreet cross-border logistics, relocation and travel planning
@@ -381,8 +384,8 @@
                             <div class="item-concierge-block__image">
                                 <img src="img/home/concierge-block/01.jpg" alt="concierge-block-img">
                             </div>
-                        </div>
-                        <div class="concierge-block__item item-concierge-block">
+                        </a>
+                        <a href="concierge.html" class="concierge-block__item item-concierge-block">
                             <div class="item-concierge-block__text b1">
                                 <p>
                                     Quiet coordination with security, legal, and private office teams
@@ -391,8 +394,8 @@
                             <div class="item-concierge-block__image">
                                 <img src="img/home/concierge-block/01.jpg" alt="concierge-block-img">
                             </div>
-                        </div>
-                        <div class="concierge-block__item item-concierge-block">
+                        </a>
+                        <a href="concierge.html" class="concierge-block__item item-concierge-block">
                             <div class="item-concierge-block__text b1">
                                 <p>
                                     Reporting, governance and oversight aligned with family-office standards
@@ -401,7 +404,7 @@
                             <div class="item-concierge-block__image">
                                 <img src="img/home/concierge-block/01.jpg" alt="concierge-block-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -434,7 +437,8 @@
                                                 confidentiality, is handled with precision.
                                             </p>
                                         </div>
-                                        <a href="#" class="item-management__btn btn btn_small btn_border-black">See
+                                        <a href="assets.html"
+                                            class="item-management__btn btn btn_small btn_border-black">See
                                             more</a>
                                     </div>
                                 </div>
@@ -454,7 +458,8 @@
                                                 confidentiality, is handled with precision.
                                             </p>
                                         </div>
-                                        <a href="#" class="item-management__btn btn btn_small btn_border-black">See
+                                        <a href="assets.html"
+                                            class="item-management__btn btn btn_small btn_border-black">See
                                             more</a>
                                     </div>
                                 </div>
@@ -474,7 +479,8 @@
                                                 confidentiality, is handled with precision.
                                             </p>
                                         </div>
-                                        <a href="#" class="item-management__btn btn btn_small btn_border-black">See
+                                        <a href="assets.html"
+                                            class="item-management__btn btn btn_small btn_border-black">See
                                             more</a>
                                     </div>
                                 </div>
@@ -498,7 +504,7 @@
                                     Thytadel began as a father–and–son project: a competitive sailor and a young
                                     engineer combining their experience to solve a real problem in civil safety.
                                 </h2>
-                                <a href=""
+                                <a href="about.html"
                                     class="about-us__btn btn btn_big btn_border-white wow animate__animated animate__fadeIn"
                                     style="animation-duration: 1.5s;">More about us</a>
                             </div>
@@ -563,7 +569,7 @@
                                 demands.</span>
                         </div>
                     </div>
-                    <div class="contact__body">
+                    <div class="contact__body" id="contact">
                         <div class="contact__content wow animate__animated animate__fadeInLeft">
                             <h2 class="contact__title medium">
                                 Contact Thytadel
@@ -606,9 +612,9 @@
             <div class="footer__row">
                 <div class="footer__column footer__column_logo">
                     <div class="footer__content">
-                        <a href="index.html" class="footer__logo">
+                        <span class="footer__logo">
                             <img src="img/logo-white.svg" alt="Thytadel">
-                        </a>
+                        </span>
                         <div class="footer__contacts contacts">
                             <div class="contacts__address">
                                 Thytadel Limited<br>
@@ -736,7 +742,8 @@
                             <div class="form-footer__socials socials">
                                 <ul>
                                     <li>
-                                        <a href="#" class="socials__link link">
+                                        <a href="https://www.linkedin.com/company/thytadel/" target="_blank"
+                                            class="socials__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">LinkedIn</span>
@@ -748,7 +755,8 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="socials__link link">
+                                        <a href="https://www.crunchbase.com/organization/thytadel" target="_blank"
+                                            class="socials__link link">
                                             <span class="link__inner">
                                                 <span class="link__content">
                                                     <span class="link__text">Crunchbase</span>
