--- a/assets.html
+++ b/assets.html
@@ -104,8 +104,8 @@
                             </ul>
                         </nav>
                         <div class="header__btns">
-                            <a href="" class="header__contact btn btn_small btn_border-white link-scroll"
-                                data-scroll="footer">Contact</a>
+                            <a href="" class="header__contact btn btn_small btn_border-black link-scroll"
+                                data-scroll="contact">Contact</a>
                             <button class="header__burger">
                                 <span></span><span></span><span></span>
                             </button>
@@ -136,10 +136,12 @@
                                 <div class="contacts__socials socials">
                                     <ul>
                                         <li>
-                                            <a href="#">LinkedIn</a>
+                                            <a href="https://www.linkedin.com/company/thytadel/"
+                                                target="_blank">LinkedIn</a>
                                         </li>
                                         <li>
-                                            <a href="#">Crunchbase</a>
+                                            <a href="https://www.crunchbase.com/organization/thytadel"
+                                                target="_blank">Crunchbase</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -368,7 +370,8 @@
                                     Real estate is managed as operational infrastructure, <span>not speculative
                                         inventory</span>
                                 </h2>
-                                <a href="" class="real-estate__btn btn-arrow btn-arrow_border-black">
+                                <a href="" class="real-estate__btn btn-arrow btn-arrow_border-black link-scroll"
+                                    data-scroll="contact">
                                     <svg>
                                         <use xlink:href="#arrow20"></use>
                                     </svg>
@@ -441,10 +444,12 @@
                             <div class="call-action__btns wow animate__animated animate__fadeIn"
                                 style="animation-delay: 0.5s; animation-duration: 1.5s;">
                                 <a href="#"
-                                    class="call-action__btn call-action__btn_discuss btn btn_small btn_border-white">Discuss
+                                    class="call-action__btn call-action__btn_discuss btn btn_small btn_border-white link-scroll"
+                                    data-scroll="contact">Discuss
                                     a deployment</a>
                                 <a href="#"
-                                    class="call-action__btn call-action__btn_overview btn btn_small btn_white">Request
+                                    class="call-action__btn call-action__btn_overview btn btn_small btn_white link-scroll"
+                                    data-scroll="contact">Request
                                     overview</a>
                             </div>
                         </div>
@@ -589,7 +594,8 @@
                                     <div class="form-footer__socials socials">
                                         <ul>
                                             <li>
-                                                <a href="#" class="socials__link link">
+                                                <a href="https://www.linkedin.com/company/thytadel/" target="_blank"
+                                                    class="socials__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">LinkedIn</span>
@@ -601,7 +607,8 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" class="socials__link link">
+                                                <a href="https://www.crunchbase.com/organization/thytadel"
+                                                    target="_blank" class="socials__link link">
                                                     <span class="link__inner">
                                                         <span class="link__content">
                                                             <span class="link__text">Crunchbase</span>
